# MomoPedia

./: .gitignore  CONTRIBUTING.md  README.md  main.py  notes.md  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
branding/: BRAND_GUIDELINES.md  DESIGN_SYSTEM.md
branding/colors/: palette.css  palette.json  palette.scss
docs/: Gemfile  _config.yml  about.md  ai-agents.md  api.md  chutneys.md  configuration.md  deployment.md  index.html
docs/_articles/: c-momo.md  fried-momo.md  jhol-momo.md  kothey-momo.md  sample-momos.md  tibetan-momo.md
docs/_includes/: footer.html  header.html
docs/_layouts/: article.html  default.html  recipe.html  region.html
docs/_recipes/: jhol-achar.md  steamed-momos.md  szechuan-chutney.md  tomato-sesame-chutney.md
docs/_regions/: bhutan.md  india.md  nepal.md  tibet.md
docs/articles/: index.md
docs/assets/css/: main.scss  momo-styles.css  retro-90s.css
docs/assets/js/: main.js
docs/recipes/: index.md
docs/regions/: index.md
src/momopedia/: llm.py  main.py  state.py
src/momopedia/agents/: author.py  chair.py  reviewer.py
src/momopedia/config/: __init__.py  config.json  settings.py
src/momopedia/monitoring/: __init__.py  system_monitor.py
src/momopedia/prompts/: personas.py
src/momopedia/tools/: web_research.py
src/momopedia/utils/: __init__.py  content_quality.py
