[project]
name = "momopedia"
version = "1.0.0"
description = "The world's first AI-powered encyclopedia dedicated exclusively to momos"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MomoPedia Team", email = "hello@momopedia.org"},
]
license = {text = "MIT"}
keywords = ["ai", "encyclopedia", "momos", "food", "culture", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    "langchain>=1.2.7",
    "langchain-community>=0.4.1", 
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.19",
    # Additional dependencies for enhanced features
    "nltk>=3.8.1",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.14",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

jekyll = [
    # Tools for Jekyll site development
    "watchdog>=3.0.0",
    "markdown>=3.5.0",
    "pygments>=2.16.0",
]

production = [
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/nabin/MomoPedia"
Documentation = "https://nabin.github.io/MomoPedia"
Repository = "https://github.com/nabin/MomoPedia.git"
"Bug Tracker" = "https://github.com/nabin/MomoPedia/issues"

[project.scripts]
momopedia = "momopedia.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings --cov=momopedia"

[tool.coverage.run]
source = ["src/momopedia"]
omit = ["*/tests/*", "*/test_*.py"]
